--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="circle-container">
     <div class="center-image" id="centerImage"></div>
     <div class="move">
-      <img src="/images/airplane.png" alt="비행기날라갑니다">
+      <img src="./images/airplane.png" alt="비행기날라갑니다">
     </div>
 
     <ul class="circle" id="circle">
@@ -35,6 +35,6 @@
   <span class="good">끝</span>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script type="module" src="/new.js"></script>
+  <script type="module" src="./new.js"></script>
 </body>
 </html>
