--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ProduceLion - PickMe</title>
+  <link rel="icon" href="./images/lion09.jpg" type="./images/lion09.jpg">
   <link rel="stylesheet" href="css.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  
 </head>
 <body>
   <h1>멋쟁이 사자들에 대해서 알아보자.</h1>
